# cpp-template-git

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: utils.cmake
packaging/: CMakeLists.txt
psqlxx/: CMakeLists.txt  args.cpp  args.hpp  args.test.cpp  exception.hpp  main.cpp  version.cpp.in  version.hpp
scripts/: CMakeLists.txt  dependencies.sh
